# rust-chess

./: .gitignore  Cargo.toml  README.md
examples/: chess.rs
src/: events.rs  game.rs  input.rs  lib.rs  logic.rs  main.rs  main.rs~  network.rs  render.rs
src/data/: bishop.mtl  king.mtl  knight.mtl  pawn.mtl  queen.mtl  rook.mtl  tile.mtl
src/glium_support/: camera.rs  mod.rs
tests/: lib.rs
