[package]

name = "rust-chess"
version = "0.0.1"
authors = ["Chris Gill <chrisfgill@gmail.com>"]

repository = "https://github.com/viperscape/rust-chess/"
keywords = ["chess", "game"]

license = "MIT"
description = "The Game of Chess, in Rust"

[dependencies.cubby]
git = "https://github.com/viperscape/cubby"

[dependencies.wire]
git = "https://github.com/TyOverby/wire"

[dependencies]
rustc-serialize = "*"
rand = "*"