[package]

name = "chess"
version = "0.0.1"
authors = ["Chris Gill <chrisfgill@gmail.com>"]

repository = "https://github.com/viperscape/rust-chess/"
keywords = ["chess", "game"]

license = "MIT"
description = "The Game of Chess, in Rust"

[[bin]]
name = "chess"
path = "examples/chess.rs"


[dependencies]
wire = "0.0.11"
uuid = "0.1"
piston = "*"
conrod = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"